# project-prometheus

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
prometheus/: __init__.py
prometheus/agents/: __init__.py  agent_daedalus.py  agent_logos.py  agent_odysseus.py  agent_prometheus.py  agent_themis.py
prometheus/api/: __init__.py  dependencies.py  main.py
prometheus/api/routers/: __init__.py  agents.py  system.py  tasks.py
prometheus/config/: __init__.py  settings.py
prometheus/core/: base_agent.py  domain.py
prometheus/infrastructure/: __init__.py  event_bus.py  message_queue.py  repositories.py
prometheus/services/: __init__.py  agent_manager.py  task_service.py
scripts/: run_demo.py
tests/: __init__.py
tests/unit/: __init__.py
